--- a/hackathons.html
+++ b/hackathons.html
@@ -90,21 +90,21 @@ td {
 <td>
     <a id="a2k19" href="images/hackathons/a2k19.gif">
     <img src="images/hackathons/a2k19-s.gif"></a><br>
-    a2k19: antipodean mini hackathon<br>
+    a2k19: antipodean минихакатон<br>
     Январь 17-24, 2019<br>
     Wellington, New Zealand<br>
     18 разработчиков<br>
-    Supported by the <a href="https://www.victoria.ac.nz">Victoria University of Wellington</a>
-    and funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    При поддержке <a href="https://www.victoria.ac.nz">Victoria University of Wellington</a>
+    и <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
     <br>
 <td>
     <a id="l2k18" href="images/hackathons/l2k18.jpg">
     <img src="images/hackathons/l2k18-s.gif"></a><br>
-    l2k18: libressl mini hackathon<br>
+    l2k18: libressl минихакатон<br>
     Ноябрь 3-11, 2018<br>
-    Edmonton, Canada<br>
+    Эдмонтон, Канада<br>
     5 разработчиков<br>
-    Supported by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
     <br>
 <td>
     <a id="n2k18" href="images/hackathons/n2k18.gif">
@@ -113,8 +113,8 @@ td {
     Сентябрь 6-11, 2018<br>
     &Uacute;st&iacute; nad Labem, Czech Republic<br>
     11 разработчиков<br>
-    Supported by Univerzita Jana Evangelisty Purkyn&#283; and
-    funded by Oracle and
+    При поддержке Univerzita Jana Evangelisty Purkyn&#283;,
+    финансировании Oracle и
     <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
 <tr>
 <td>
@@ -124,26 +124,26 @@ td {
     Июль 8-13, 2018<br>
     Любляна, Словения<br>
     39 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
-    and with the support of Mitja Mu&#382;eni&#269;.
+    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    и Mitja Mu&#382;eni&#269;.
 <td>
     <a id="p2k18" href="images/hackathons/p2k18.gif">
     <img src="images/hackathons/p2k18-s.gif"></a><br>
-    p2k18: ports (and pledge) hackathon<br>
+    p2k18: порты (и pledge) хакатон<br>
     Апрель 23-29, 2018<br>
     Nantes, Франция<br>
     24 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
-    and with the support of <a href="http://www.epitech.eu">Epitech Nantes</a>.
+    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    и <a href="http://www.epitech.eu">Epitech Nantes</a>.
 <td>
     <a id="a2k18" href="images/hackathons/a2k18.gif">
     <img src="images/hackathons/a2k18-s.gif"></a><br>
-    a2k18: antipodean hackathon<br>
+    a2k18: antipodean хакатон<br>
     Февраль 5-11, 2018<br>
     Данидин, Новая Зеландия<br>
     19 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
-    and with the support of <a href="http://www.otago.ac.nz">University of Otago</a>.
+    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    и <a href="http://www.otago.ac.nz">University of Otago</a>.
 <tr>
 <td>
     <a id="s2k17" href="images/hackathons/s2k17.gif">
@@ -152,8 +152,8 @@ td {
     Ноябрь 26 - 29, 2017<br>
     Elk Lakes Cabin, BC<br>
     10 разработчиков<br>
-    Funded by <a href="http://www.foretell.ca">ForeTell Technologies</a>
-    and with the support of <a href="http://www.xplornet.ca">Xplornet</a>.
+    При поддержке <a href="http://www.foretell.ca">ForeTell Technologies</a>
+    и <a href="http://www.xplornet.ca">Xplornet</a>.
 <td>
     <a id="p2k17" href="images/hackathons/p2k17.gif">
     <img src="images/hackathons/p2k17-s.gif"></a><br>
@@ -161,8 +161,8 @@ td {
     Ноябрь 1 - 6, 2017<br>
     Берлин, Германия<br>
     23 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
-    with the support of <a href="http://www.in-berlin.de">IN-Berlin</a> and
+    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    и <a href="http://www.in-berlin.de">IN-Berlin</a> and
     <a href="http://www.hostserver.de/">Hostserver</a>.
 <td>
     <a id="t2k17" href="images/hackathons/t2k17.jpg">
@@ -171,8 +171,8 @@ td {
     Август 9 - 15, 2017<br>
     Торонто, Канада<br>
     38 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
-    and with the support of <a href="http://www.utoronto.ca">University of Toronto</a>.
+    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    и <a href="http://www.utoronto.ca">University of Toronto</a>.
 <tr>
 <td>
     <a id="d2k17" href="images/hackathons/d2k17.gif">
@@ -181,8 +181,8 @@ td {
     Май 26 - 31, 2017<br>
     Штарнберг, Германия<br>
     24 разработчика<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
-    and with the support of <a href="http://www.genua.de">genua</a>.
+    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    и <a href="http://www.genua.de">genua</a>.
 <td>
     <a id="noshirt" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif"></a><br>
@@ -198,8 +198,8 @@ td {
     Январь 19 - 26, 2017<br>
     Брисбен, Австралия<br>
     19 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
-    and with the support of David Gwynne.	
+    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    и David Gwynne.	
 <tr>
 <td>
     <br>
@@ -219,8 +219,8 @@ td {
     Ноябрь 2 - 6, 2016<br>
     Тулуза, Франция<br>
     9 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
-    with the help of <a href="http://www.enseeiht.fr">ENSEEIHT</a> and
+    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    и оказанной помощи от <a href="http://www.enseeiht.fr">ENSEEIHT</a> и
     <a href="http://www.objectif-libre.com">Objectif Libre</a>.
 <td>
     <a id="b2k16" href="images/hackathons/b2k16.gif">
@@ -229,7 +229,7 @@ td {
     Октябрь 31 - Nov 5, 2016<br>
     Будапешт, Венгрия<br>
     10 разработчиков<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
 <td>
     <a id="g2k16" href="images/hackathons/g2k16.gif">
     <img src="images/hackathons/g2k16-s.gif"></a><br>
@@ -347,11 +347,11 @@ td {
     <a id="n2k14" href="images/hackathons/n2k14.gif">
     <img src="images/hackathons/n2k14-s.gif"></a><br>
     n2k14: mini hackathon<br>
-    Jan 18 - 25, 2014<br>
+    Январь 18 - 25, 2014<br>
     Dunedin, New Zealand<br>
-    15 developers<br>
-    Funded by <a href="http://www.foretell.ca">ForeTell Technologies</a>
-    and with the support of <a href="http://www.otago.ac.nz">University of Otago</a>.
+    15 разработчиков<br>
+    При финансировании <a href="http://www.foretell.ca">ForeTell Technologies</a>
+    и поддержке <a href="http://www.otago.ac.nz">University of Otago</a>.
 <tr>
 <td>
     <a id="b2k13" href="images/hackathons/b2k13.gif">
@@ -396,7 +396,7 @@ td {
     p2k12: ports hackathon<br>
     Октябрь 8 - 13, 2012<br>
     Будапешт, Вергрия<br>
-    9 developers<br>
+    9 разработчиков<br>
     Funded by <a href="donations.html">donations to
     The OpenBSD Project</a>.
 <td>
@@ -404,7 +404,7 @@ td {
     <img src="images/hackathons/n2k12-s.gif"></a><br>
     n2k12: network hackathon<br>
     Сентябь 17 - 21, 2012<br>
-    Штанберг, Германия<br>
+    Штарнберг, Германия<br>
     23 разработчика<br>
     Funded by <a href="http://www.genua.de">genua</a>.
 <tr>
@@ -430,9 +430,9 @@ td {
     <a id="p2k11" href="images/hackathons/p2k11.gif">
     <img src="images/hackathons/p2k11-s.gif"></a><br>
     p2k11: Ports hackathon<br>
-    Nov 12 - 18, 2011<br>
+    Ноябрь 12 - 18, 2011<br>
     Budapest, Hungary<br>
-    15 developers<br>
+    15 разработчиков<br>
     Funded by <a href="donations.html">donations to
     the OpenBSD Project</a>.
 <tr>
@@ -440,62 +440,63 @@ td {
     <a id="a2k11" href="images/hackathons/a2k11.gif">
     <img src="images/hackathons/a2k11-s.gif"></a><br>
     a2k11: ARM hackathon<br>
-    Nov 5 - 12, 2011<br>
+    Ноябрь 5 - 12, 2011<br>
     Coimbra, Portugal<br>
-    8 developers<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
-    and with the support of <a href="http://www.uc.pt">University of Coimbra</a>.
+    8 разработчиков<br>
+    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    и <a href="http://www.uc.pt">University of Coimbra</a>.
 <td>
     <a id="s2k11" href="images/hackathons/s2k11.jpg">
     <img src="images/hackathons/s2k11-s.gif"></a><br>
     s2k11: General hackathon<br>
-    Sep 16 - 23, 2011<br>
+    Сентябрь 16 - 23, 2011<br>
     Ljubljana, Slovenia<br>
-    25 developers<br>
+    25 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of Mitja Mu&#382;eni&#269;.
 <td>
     <a id="c2k11" href="images/hackathons/c2k11.gif">
     <img src="images/hackathons/c2k11-s.gif"></a><br>
     c2k11: General hackathon<br>
-    Jul 2 - 9, 2011<br>
-    Edmonton, Alberta, Canada<br>
-    36 developers<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    Июль 2 - 9, 2011<br>
+    Эдмонтон, Альберта, Канада<br>
+    36 разработчиков<br>
+    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
 <tr>
 <td>
     <a id="k2k11" href="images/hackathons/k2k11.jpg">
     <img src="images/hackathons/k2k11-s.gif"></a><br>
     k2k11: Kernel hackathon<br>
-    Apr 1 - 7, 2011<br>
+    Апрель 1 - 7, 2011<br>
     Hafnarfjordur, Iceland<br>
-    15 developers<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    15 разработчиков<br>
+    При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
 <td>
     <a id="p2k10" href="images/hackathons/p2k10.gif">
     <img src="images/hackathons/p2k10-s.gif"></a><br>
     p2k10: Ports hackathon<br>
-    Oct 23 - 29, 2010<br>
-    Budapest, Hungary<br>
-    19 developers<br>
-    Funded by <a href="donations.html">donations to
-    the OpenBSD Project</a>.
+    Октябрь 23 - 29, 2010<br>
+    Будапешт, Венгрия<br>
+    19 разработчиков<br>
+    При поддержке
+    <a href="donations.html">пожертований проекту OpenBSD</a>.
 <td>
     <a id="j2k10" href="images/hackathons/j2k10.gif">
     <img src="images/hackathons/j2k10-s.gif"></a><br>
     j2k10: mini-hackathon in Japan<br>
-    Sep 19 - 25, 2010<br>
+    Сентябрь 19 - 25, 2010<br>
     Akiyamago, Sakae Mura, Nagano, Japan<br>
-    19 developers<br>
+    19 разработчиков<br>
 <tr>
 <td>
     <a id="c2k10" href="images/hackathons/c2k10.gif">
     <img src="images/hackathons/c2k10-s.gif"></a><br>
     c2k10: General hackathon<br>
-    Jun 25 - Jul 3, 2010<br>
-    Edmonton, Alberta<br>
-    46 developers<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    Июнь 25 - Июль 3, 2010<br>
+    Эдмонтон, Альберта<br>
+    46 разработчиков<br>
+    При поддержке
+    <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
 <td>
     <br>
     <br>
@@ -507,64 +508,63 @@ td {
     <br>
     <br>
     n2k10: Network hackathon<br>
-    Jan 9 - 15, 2010<br>
+    Январь 9 - 15, 2010<br>
     Melbourne, Australia<br>
-    17 developers<br>
-    Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
-    and support of
-    <a href="http://vpac.org">Victorian Partnership for Advanced Computing</a>
+    17 разработчиков<br>
+    При финансировании <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    и поддержке <a href="http://vpac.org">Victorian Partnership for Advanced Computing</a>
 <td>
     <a id="h2k9" href="images/hackathons/h2k9.gif">
     <img src="images/hackathons/h2k9-s.gif"></a><br>
-    h2k9: Hardware hackathon<br>
-    Nov 21 - 27, 2009<br>
-    Coimbra, Portugal<br>
-    15 developers<br>
-    Funded by <a href="donations.html">donations to
-    the OpenBSD Project</a>
-    and with the support of <a href="http://www.uc.pt">University of Coimbra</a>.
+    h2k9: Hardware хакатон<br>
+    Ноябрь 21 - 27, 2009<br>
+    Coimbra, Португалия<br>
+    15 разработчиков<br>
+    Организован благодаря <a href="donations.html">пожертвованиям
+    в проект OpenBSD</a>
+    и при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
 <tr>
 <td>
     <a id="p2k9" href="images/hackathons/p2k9.gif">
     <img src="images/hackathons/p2k9-s.gif"></a><br>
-    p2k9: Ports hackathon<br>
-    Oct 9 - 16, 2009<br>
-    Budapest, Hungary<br>
-    14 developers<br>
-    Funded by <a href="donations.html">donations to
-    the OpenBSD Project</a>.
+    p2k9: Ports хакатон<br>
+    Октябрь 9 - 16, 2009<br>
+    Будапешт, Венгрия<br>
+    14 разоаботчиков<br>
+    Организован благодаря <a href="donations.html">пожертвованиям
+    проекту OpenBSD</a>.
 <td>
     <a id="f2k9" href="images/hackathons/f2k9.gif">
     <img src="images/hackathons/f2k9-s.gif"></a><br>
     f2k9: Filesystem/uvm hackathon<br>
-    Aug 7 - 14, 2009<br>
-    Stockholm, Sweden<br>
-    14 developers<br>
-    Funded by <a href="https://www.iis.se/english/">.se Foundation</a>.
+    Август 7 - 14, 2009<br>
+    Стокгольм, Швеция<br>
+    14 разработчиков<br>
+    При финансивании <a href="https://www.iis.se/english/">.se Foundation</a>.
 <td>
     <a id="c2k9" href="images/hackathons/c2k9.gif">
     <img src="images/hackathons/c2k9-s.gif"></a><br>
     c2k9: General hackathon<br>
-    May 30 - Jun 7, 2009<br>
-    Edmonton, Alberta<br>
-    46 developers<br>
-    Funded by <a href="donations.html">donations to
-    the OpenBSD Project</a>.
+    Май 30 - Jun 7, 2009<br>
+    Эдмонтон, Альберта<br>
+    46 разработчиков<br>
+    Организован благодаря <a href="donations.html">пожертвованиям
+    проекту OpenBSD</a>.
 <tr>
 <td>
     <a id="n2k9" href="images/hackathons/n2k9.gif">
     <img src="images/hackathons/n2k9-s.gif"></a><br>
     n2k9: Network hackathon<br>
-    Jan 26 - 30, 2009<br>
-    Basel, Switzerland<br>
-    19 developers<br>
+    Январь 26 - 30, 2009<br>
+    Базель, Швейцария<br>
+    19 разработчиков<br>
 <td>
     <a id="h2k8" href="images/hackathons/h2k8.gif">
     <img src="images/hackathons/h2k8-s.gif"></a><br>
     h2k8: Hardware hackathon<br>
-    Nov 20 - 27, 2008<br>
+    Ноябрь 20 - 27, 2008<br>
     Coimbra, Portugal<br>
-    18 developers<br>
+    18 разработчиков<br>
     Funded by <a href="donations.html">donations to
     the OpenBSD Project</a>
     and with the support of <a href="http://www.uc.pt">University of Coimbra</a>.
