--- a/hackathons.html
+++ b/hackathons.html
@@ -88,6 +88,15 @@ td {
 <table>
 <tr>
 <td>
+    <a id="g2k19" href="images/hackathons/g2k19.gif">
+    <img src="images/hackathons/g2k19-s.gif"></a><br>
+    g2k19: general hackathon<br>
+    Май 7 - 14, 2019<br>
+    Оттава, Канада<br>
+    42 разработчика<br>
+    При финансировании <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+    <br>
+<td>
     <a id="t2k19" href="images/hackathons/t2k19.gif">
     <img src="images/hackathons/t2k19-s.gif"></a><br>
     t2k19: taipei mini hackathon<br>
@@ -107,6 +116,7 @@ td {
     При поддержке <a href="https://www.victoria.ac.nz">Victoria University of Wellington</a>
     и <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
     <br>
+<tr>
 <td>
     <a id="l2k18" href="images/hackathons/l2k18.jpg">
     <img src="images/hackathons/l2k18-s.gif"></a><br>
@@ -116,7 +126,6 @@ td {
     5 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
     <br>
-<tr>
 <td>
     <a id="n2k18" href="images/hackathons/n2k18.gif">
     <img src="images/hackathons/n2k18-s.gif"></a><br>
@@ -136,6 +145,7 @@ td {
     39 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и Mitja Mu&#382;eni&#269;.
+<tr>
 <td>
     <a id="p2k18" href="images/hackathons/p2k18.gif">
     <img src="images/hackathons/p2k18-s.gif"></a><br>
@@ -145,7 +155,6 @@ td {
     24 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и <a href="http://www.epitech.eu">Epitech Nantes</a>.
-<tr>
 <td>
     <a id="a2k18" href="images/hackathons/a2k18.gif">
     <img src="images/hackathons/a2k18-s.gif"></a><br>
@@ -164,6 +173,7 @@ td {
     10 разработчиков<br>
     При поддержке <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и <a href="http://www.xplornet.ca">Xplornet</a>.
+<tr>
 <td>
     <a id="p2k17" href="images/hackathons/p2k17.gif">
     <img src="images/hackathons/p2k17-s.gif"></a><br>
@@ -174,7 +184,6 @@ td {
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и <a href="http://www.in-berlin.de">IN-Berlin</a> and
     <a href="http://www.hostserver.de/">Hostserver</a>.
-<tr>
 <td>
     <a id="t2k17" href="images/hackathons/t2k17.jpg">
     <img src="images/hackathons/t2k17-s.gif"></a><br>
@@ -193,6 +202,7 @@ td {
     24 разработчика<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и <a href="http://www.genua.de">genua</a>.
+<tr>
 <td>
     <a id="noshirt" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif"></a><br>
@@ -201,7 +211,6 @@ td {
     Эдмонтон, Канада<br>
     5 разработчиков<br>
     При поддержке Bob Beck.
-<tr>
 <td>
     <a id="a2k17" href="images/hackathons/a2k17.gif">
     <img src="images/hackathons/a2k17-s.gif"></a><br>
@@ -232,6 +241,7 @@ td {
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и оказанной помощи от <a href="http://www.enseeiht.fr">ENSEEIHT</a> и
     <a href="http://www.objectif-libre.com">Objectif Libre</a>.
+<tr>
 <td>
     <a id="b2k16" href="images/hackathons/b2k16.gif">
     <img src="images/hackathons/b2k16-s.gif"></a><br>
@@ -240,7 +250,6 @@ td {
     Будапешт, Венгрия<br>
     10 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="g2k16" href="images/hackathons/g2k16.gif">
     <img src="images/hackathons/g2k16-s.gif"></a><br>
@@ -261,6 +270,7 @@ td {
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and <a href="http://www.oracle.com">Oracle</a>, with the help of
     <a href="http://cuni.cz">Charles University</a>.
+<tr>
 <td>
     <a id="p2k16" href="images/hackathons/p2k16.gif">
     <img src="images/hackathons/p2k16-s.gif"></a><br>
@@ -270,7 +280,6 @@ td {
     22 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.epitech.eu">Epitech Nantes</a>.
-<tr>
 <td>
     <a id="n2k15" href="images/hackathons/n2k15.gif">
     <img src="images/hackathons/n2k15-s.gif"></a><br>
@@ -289,6 +298,7 @@ td {
     22 разработчика<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.in-berlin.de">IN-Berlin</a>.
+<tr>
 <td>
     <a id="l2k15" href="images/hackathons/l2k15.gif">
     <img src="images/hackathons/l2k15-s.gif"></a><br>
@@ -298,7 +308,6 @@ td {
     17 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     with help of the <a href="http://foi.unizg.hr">Open Systems and Security Lab</a>.
-<tr>
 <td>
     <a id="j2k15" href="images/hackathons/j2k15.gif">
     <img src="images/hackathons/j2k15-s.gif"></a><br>
@@ -316,6 +325,7 @@ td {
     45 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://sait.ca">SAIT</a>.
+<tr>
 <td>
     <a id="p2k15" href="images/hackathons/p2k15.gif">
     <img src="images/hackathons/p2k15-s.gif"></a><br>
@@ -325,7 +335,6 @@ td {
     14 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of Andy Henderson.
-<tr>
 <td>
     <a id="s2k15" href="images/hackathons/s2k15.gif">
     <img src="images/hackathons/s2k15-s.gif"></a><br>
@@ -344,6 +353,7 @@ td {
     49 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of Mitja Mu&#382;eni&#269;.
+<tr>
 <td>
     <a id="m2k14" href="images/hackathons/m2k14.gif">
     <img src="images/hackathons/m2k14-s.gif"></a><br>
@@ -353,7 +363,6 @@ td {
     12 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.uca.ma/">Universit&eacute; Cadi Ayyad</a>.
-<tr>
 <td>
     <a id="n2k14" href="images/hackathons/n2k14.gif">
     <img src="images/hackathons/n2k14-s.gif"></a><br>
@@ -372,6 +381,7 @@ td {
     21 разработчик<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.in-berlin.de">IN-Berlin</a>.
+<tr>
 <td>
     <a id="t2k13" href="images/hackathons/t2k13.jpg">
     <img src="images/hackathons/t2k13-s.gif"></a><br>
@@ -381,7 +391,6 @@ td {
     43 разработчика<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.utoronto.ca">University of Toronto</a>.
-<tr>
 <td>
     <a id="n2k13" href="images/hackathons/n2k13.gif">
     <img src="images/hackathons/n2k13-s.gif"></a><br>
@@ -400,6 +409,7 @@ td {
     10 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.uc.pt">University of Coimbra</a>.
+<tr>
 <td>
     <a id="p2k12" href="images/hackathons/p2k12.gif">
     <img src="images/hackathons/p2k12-s.gif"></a><br>
@@ -409,7 +419,6 @@ td {
     9 разработчиков<br>
     Funded by <a href="https://www.openbsd.org/donations.html">donations to
     The OpenBSD Project</a>.
-<tr>
 <td>
     <a id="n2k12" href="images/hackathons/n2k12.gif">
     <img src="images/hackathons/n2k12-s.gif"></a><br>
@@ -426,6 +435,7 @@ td {
     Будапешт, Венгрия<br>
     41 разработчик<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="r2k12" href="images/hackathons/r2k12.gif">
     <img src="images/hackathons/r2k12-s.gif"></a><br>
@@ -436,7 +446,6 @@ td {
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and support of <a href="http://www.ihp.fr">Institute Henri Poincar&eacute;</a> and
     <a href="http://www.u-psud.fr">Paris-Sud University</a>.
-<tr>
 <td>
     <a id="p2k11" href="images/hackathons/p2k11.gif">
     <img src="images/hackathons/p2k11-s.gif"></a><br>
@@ -455,6 +464,7 @@ td {
     8 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и <a href="http://www.uc.pt">University of Coimbra</a>.
+<tr>
 <td>
     <a id="s2k11" href="images/hackathons/s2k11.jpg">
     <img src="images/hackathons/s2k11-s.gif"></a><br>
@@ -464,7 +474,6 @@ td {
     25 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of Mitja Mu&#382;eni&#269;.
-<tr>
 <td>
     <a id="c2k11" href="images/hackathons/c2k11.gif">
     <img src="images/hackathons/c2k11-s.gif"></a><br>
@@ -481,6 +490,7 @@ td {
     Hafnarfjordur, Iceland<br>
     15 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="p2k10" href="images/hackathons/p2k10.gif">
     <img src="images/hackathons/p2k10-s.gif"></a><br>
@@ -490,7 +500,6 @@ td {
     19 разработчиков<br>
     При поддержке
     <a href="https://www.openbsd.org/donations.html">пожертований проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="j2k10" href="images/hackathons/j2k10.gif">
     <img src="images/hackathons/j2k10-s.gif"></a><br>
@@ -507,6 +516,7 @@ td {
     46 разработчиков<br>
     При поддержке
     <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+<tr>
 <td>
     <br>
     <br>
@@ -523,7 +533,6 @@ td {
     17 разработчиков<br>
     При финансировании <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и поддержке <a href="http://vpac.org">Victorian Partnership for Advanced Computing</a>
-<tr>
 <td>
     <a id="h2k9" href="images/hackathons/h2k9.gif">
     <img src="images/hackathons/h2k9-s.gif"></a><br>
@@ -543,6 +552,7 @@ td {
     14 разоаботчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">пожертвованиям
     проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="f2k9" href="images/hackathons/f2k9.gif">
     <img src="images/hackathons/f2k9-s.gif"></a><br>
@@ -551,7 +561,6 @@ td {
     Стокгольм, Швеция<br>
     14 разработчиков<br>
     При финансивании <a href="https://www.iis.se/english/">.se Foundation</a>.
-<tr>
 <td>
     <a id="c2k9" href="images/hackathons/c2k9.gif">
     <img src="images/hackathons/c2k9-s.gif"></a><br>
@@ -568,6 +577,7 @@ td {
     Январь 26 - 30, 2009<br>
     Базель, Швейцария<br>
     19 разработчиков<br>
+<tr>
 <td>
     <a id="h2k8" href="images/hackathons/h2k8.gif">
     <img src="images/hackathons/h2k8-s.gif"></a><br>
@@ -578,7 +588,6 @@ td {
     Funded by <a href="https://www.openbsd.org/donations.html">donations to
     the OpenBSD Project</a>
     and with the support of <a href="http://www.uc.pt">University of Coimbra</a>.
-<tr>
 <td>
     <a id="p2k8" href="images/hackathons/p2k8.gif">
     <img src="images/hackathons/p2k8-s.gif"></a><br>
@@ -596,6 +605,7 @@ td {
     Эдмонтон, Аьберта<br>
     55 разработчиков<br>
     Организован <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="n2k8" href="images/hackathons/n2k8.gif">
     <img src="images/hackathons/n2k8-s.gif"></a><br>
@@ -605,7 +615,6 @@ td {
     18 разработчиков<br>
     Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a> и помощи Mark Uemura.
-<tr>
 <td>
     <a id="h2k7" href="images/hackathons/h2k7.gif">
     <img src="images/hackathons/h2k7-s.gif"></a><br>
@@ -625,6 +634,7 @@ td {
     13 разработчиков<br>
     Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k7" href="images/hackathons/c2k7.gif">
     <img src="images/hackathons/c2k7-s.gif"></a><br>
@@ -634,7 +644,6 @@ td {
     50 разработчиков<br>
     Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
-<tr>
 <td>
     <a id="f2k7" href="images/hackathons/f2k7.gif">
     <img src="images/hackathons/f2k7-s.gif"></a><br>
@@ -654,6 +663,7 @@ td {
     Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
+<tr>
 <td>
     <a id="p2k6" href="images/hackathons/p2k6.gif">
     <img src="images/hackathons/p2k6-s.gif"></a><br>
@@ -663,7 +673,6 @@ td {
     14 разработчиков<br>
     Огранизован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
-<tr>
 <td>
     <a id="k2k6" href="images/hackathons/k2k6.gif">
     <img src="images/hackathons/k2k6-s.gif"></a><br>
@@ -679,6 +688,7 @@ td {
     Гамбург, Германия<br>
     6 разработчиков<br>
     При поддержке Henning Brauer.
+<tr>
 <td>
     <a id="c2k6" href="images/hackathons/c2k6.gif">
     <img src="images/hackathons/c2k6-s.gif"></a><br>
@@ -688,7 +698,6 @@ td {
     47 разработчиков<br>
     Организован <a href="https://www.openpbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
-<tr>
 <td>
     <a id="v2k5" href="images/hackathons/v2k5.gif">
     <img src="images/hackathons/v2k5-s.gif"></a><br>
@@ -707,6 +716,7 @@ td {
     60 разработчиков<br>
     Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k4" href="images/hackathons/c2k4.gif">
     <img src="images/hackathons/c2k4-s.gif"></a><br>
@@ -716,7 +726,6 @@ td {
     46 разработчика<br>
     Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
-<tr>
 <td>
     <a id="pf2k4" href="images/hackathons/pf2k4.gif">
     <img src="images/hackathons/pf2k4-s.gif"></a><br>
@@ -734,6 +743,7 @@ td {
     51 разработчик<br>
     Основан <a href="https://www.nlnetlabs.nl">NLnet</a>
     (после того, как DARPA прекратила оказывать поддержку).
+<tr>
 <td>
     <a id="c2k2" href="images/hackathons/c2k2.gif">
     <img src="images/hackathons/c2k2-s.gif"></a><br>
@@ -742,7 +752,6 @@ td {
     Калгари, Альберта<br>
     42 разработчика<br>
     Основан DARPA.
-<tr>
 <td>
     <a id="c2k1-2" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif"></a><br>
@@ -758,6 +767,7 @@ td {
     Кембридж, Массачусетс<br>    
     25 разработчиков<br>
     Организован DARPA при поддержке <a href="http://www.mit.edu">MIT</a>.
+<tr>
 <td>
     <a id="c2k" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif"></a><br>
@@ -767,7 +777,6 @@ td {
     18 разработчиков<br>
     Организован <a href="https://www.openbsd.org/donations.html">при поддержке
     проекта OpenBSD</a>.
-<tr>
 <td>
     <a id="c99" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif"></a><br>
