--- a/openssh/security.html
+++ b/openssh/security.html
@@ -32,6 +32,32 @@ OpenSSH разрабатывается по тем же принципам и т
 <a href="../security.html">безопасности OpenBSD</a>.
 
 <ul>
+<li><p><b>July 19, 2023</b><br>
+        ssh-agent(1) in OpenSSH between and 5.5 and 9.3p1 (inclusive)
+        remote code execution relating to PKCS#11 providers
+    <br>
+        The PKCS#11 support ssh-agent(1) could be abused to achieve remote
+        code execution via a forwarded agent socket if the following conditions
+        are met:
+    <ul>
+        <li>Exploitation requires the presence of specific libraries on the victim system.</li>
+        <li>Remote exploitation requires that the agent was forwarded to an attacker-controlled system.</li>
+    </ul>
+        Exploitation can also be prevented by starting ssh-agent(1) with an
+        empty PKCS#11/FIDO allowlist (ssh-agent -P '') or by configuring
+        an allowlist that contains only specific provider libraries.
+    <br>
+        This vulnerability was discovered and demonstrated to be exploitable
+        by the Qualys Security Advisory team. This vulnerability has been
+        assigned CVE-2023-38408.
+    <br>
+	This bug is corrected in OpenSSH 9.3p2. For OpenBSD, an
+        <a href="https://www.openbsd.org/errata.html">errata</a>
+        patch exists to fix this problem.
+    <br>
+    For more information, please refer to the
+    <a href="https://www.openssh.com/txt/release-9.3p2">release notes</a>.
+
 <li><p><b>March 15, 2023</b><br>
     ssh-add(1) in OpenSSH between and 8.9 and 9.2 (inclusive).
     <br>
